--- a/pom.xml
+++ b/pom.xml
@@ -16,11 +16,17 @@
     <repositories>
         <repository>
             <id>github</id>
-            <url>https://github.com/P0pini/shop.git</url>
+            <name>Github Repository</name>
+            <url>https://maven.pkg.github.com/P0pini/site</url>
         </repository>
     </repositories>
 
     <dependencies>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>package1</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter</artifactId>
